// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The password input field should match snapshot with text hidden by default 1`] = `
<div>
  <div
    class="chakra-input__group css-4302v8"
  >
    <input
      class="chakra-input css-12c6ypn"
      data-testid="password-input"
      type="password"
    />
    <div
      class="chakra-input__right-element css-ohd79a"
    >
      <button
        class="chakra-button css-bzoy97"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</div>
`;

exports[`The password input field should match snapshot with text shown 1`] = `
<div>
  <div
    class="chakra-input__group css-4302v8"
  >
    <input
      class="chakra-input css-12c6ypn"
      data-testid="password-input"
      type="text"
    />
    <div
      class="chakra-input__right-element css-ohd79a"
    >
      <button
        class="chakra-button css-bzoy97"
        type="button"
      >
        Hide
      </button>
    </div>
  </div>
</div>
`;

exports[`The password input field should match snapshots 1`] = `
<div>
  <div
    class="chakra-input__group css-4302v8"
  >
    <input
      class="chakra-input css-12c6ypn"
      data-testid="password-input"
      type="password"
    />
    <div
      class="chakra-input__right-element css-ohd79a"
    >
      <button
        class="chakra-button css-bzoy97"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</div>
`;
